<resources>
    <string name="app_name">FlashBack</string>
    <string name="title_activity_maps">Map</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="loginButtonText">Login</string>
    <string name="passwordConfirm_hint">Confirm Password</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="signUpErrorTitle">Try Again</string>
    <string name="signUpErrorText">Please fill out all of the boxes</string>
    <string name="passwordErrorText">One of your passwords do not match</string>
    <string name="randomErrorText">Something went wrong )-: Please try again later! </string>
    <string name="createdUserText">You have successfully created an account!</string>
    <string name="signUpCompleteTitle">Sign Up</string>
    <string name="noPermissionText">Please give FlashBack location permissions in the settings!</string>
    <string name="forgotPasswordErrorText">Please enter your email!</string>
    <string name="forgotPasswordSuccessText">Check your email for your temporary password</string>
    <string name="wrongPasswordUserText">Your username or password is incorrect.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enterMessage">Enter Message</string>
</resources>
